--- a/index.html
+++ b/index.html
@@ -6,22 +6,13 @@
 </head>
 <body>
 
-<h1>Geometry Dash Web</h1>
-
-<div id="menu">
-    <button onclick="startLevel(1)">Stereo Madness</button>
-    <button onclick="startLevel(2)">Back On Track</button>
-    <button onclick="startLevel(3)">Polargeist</button>
-    <button onclick="startLevel(4)">Dry Out</button>
-    <button onclick="startLevel(5)">Base After Base</button>
-    <button onclick="startLevel(6)">Can't Let Go</button>
-</div>
+<h1>Geometry Dash Web - Multi Mode</h1>
 
 <div id="game">
     <div id="player"></div>
 </div>
 
-<h2 id="status"></h2>
+<h2 id="status">Press Space or ↑ to Start</h2>
 
 <script src="script.js"></script>
 </body>
